--- a/feelgood/HMML CSS/bootstrap/index.html
+++ b/feelgood/HMML CSS/bootstrap/index.html
@@ -61,9 +61,21 @@
         <li class="active">Data</li>
     </ol>
     <div class="row">
-        <div class="col-md-4"><h3> lorem </h3> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, architecto.</p></div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <h3> lorem </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, architecto.</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+        <div class="col-md-4">
+            <h3> lorem </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, architecto.</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
+        <div class="col-md-4">
+            <h3> lorem </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, architecto.</p>
+            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
