--- a/feelgood/HMML CSS/structure/index.html
+++ b/feelgood/HMML CSS/structure/index.html
@@ -10,13 +10,28 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus numquam, voluptas! Id unde sequi non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, consequatur!</h1>
+            <ul class="menu">
+                <li>list_1</li>
+                <li>list_2</li>
+                <li>list_3</li>
+                <li>list_4</li>
+                <li>list_5</li>
+                <li>list_6</li>
+                <li>list_7</li>
+                <li>list_8</li>
+            </ul>
         </div>
-        <div class="menu"></div>
+        <div class="nav"></div>
         <div class="content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ipsum maxime molestiae voluptatibus rerum reprehenderit odit voluptas nisi quas vero necessitatibus, porro in quia assumenda tenetur ab aliquid inventore esse, possimus cupiditate expedita! Placeat, distinctio, dignissimos consequatur amet sint animi inventore, quibusdam culpa dicta sed aspernatur facilis, praesentium laboriosam quam ipsa adipisci? Assumenda quibusdam sint harum ipsa, magni inventore repellendus, eius officia ratione at? Aspernatur debitis mollitia quia dolorem quis similique officiis labore dignissimos, temporibus nobis recusandae eligendi? Ab, ipsam commodi? Nesciunt quod minima odit, recusandae itaque, assumenda nemo repudiandae quaerat cum quibusdam dolor amet enim. Iure ab neque dicta fugit, quod omnis laboriosam saepe officiis ipsum perspiciatis incidunt eum nam, ratione commodi deleniti placeat vel voluptatibus iusto! Vel facilis fuga, enim ad non, doloremque molestiae magni corporis reiciendis explicabo officiis voluptatibus quisquam modi molestias quae quia dolorum eaque veniam repudiandae, rem. Mollitia quaerat tenetur asperiores reprehenderit, quas ab, optio eum, similique, provident tempore itaque unde sit nam ea quia perferendis cum reiciendis! Consequuntur veritatis porro voluptatem non sint facilis repellendus, eos mollitia ut corrupti fugiat voluptate vitae ducimus eius quam cupiditate assumenda aut commodi modi nobis. Optio illo, eveniet quae nulla quis amet maiores labore aliquam sequi accusamus, blanditiis, culpa. Repellendus, consequatur ipsum veritatis alias voluptatibus! Sapiente nesciunt eaque, quam quibusdam earum a corporis voluptatem illo error vitae! Rerum assumenda perspiciatis aspernatur fuga. Velit omnis voluptas quisquam labore nemo numquam accusamus, sit perspiciatis animi ipsum quas ducimus ullam error tempore totam voluptates deserunt minus, culpa. Id harum, dicta possimus maxime molestiae suscipit beatae reprehenderit eos dignissimos, delectus, expedita commodi? Atque incidunt ipsum, voluptatem quos nobis alias quaerat reprehenderit accusamus, pariatur perferendis commodi enim sapiente, delectus minima repudiandae autem illo sed veniam odit placeat. Animi distinctio, veritatis. Fugiat sapiente labore nobis porro ullam quisquam, perspiciatis autem atque adipisci recusandae deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat sapiente eligendi obcaecati reiciendis dolorem incidunt, perferendis beatae culpa cumque, ipsum facere tempora consequatur maxime atque omnis molestiae, tenetur veritatis natus, officiis. Nam, sunt. Delectus dolore enim quibusdam nam, cumque rerum eius quod at corporis praesentium, voluptate. Provident nisi, accusantium officiis, amet velit fugit excepturi. Quaerat, atque aut aperiam, aliquam error ex cupiditate doloremque illo temporibus sunt iure suscipit dolor adipisci cumque ab fugit vel. Incidunt inventore iure aspernatur optio, voluptatem magni velit iusto, voluptates alias est impedit, qui natus dolore tempora quod sequi cum eveniet sint? Dicta dolor, optio.
-            <div class="clr"></div>
+             <div class="block"></div>
+             <div class="block"></div>
+             <div class="block"></div>
+             <div class="block"></div>
+             <div class="block"></div>
+             <div class="block"></div>
+             <div class="clearfix"></div>
         </div>
+            <div class="clr"></div>
     </div>
         <div class="footer"></div>
 </body>
