--- a/feelgood/HMML CSS/site watch/registr.html
+++ b/feelgood/HMML CSS/site watch/registr.html
@@ -54,7 +54,7 @@
                     <br> </fieldset>
                 <fieldset>
                     <legend>О себе</legend>
-                    <textarea name="" id="" cols="50" rows="5" placeholder="Расскажите о себе..."></textarea>
+                    <textarea name="" id="himself" cols="1" rows="5" placeholder="Расскажите о себе..."></textarea>
                     <br> Фото:
                     <input type="file"> </fieldset>
                 <input type="submit" value="Отправить анкету">
