--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -110,6 +110,40 @@
                 </table>
             </div>
         </div>
+        <div class="content_2">
+            <div class="head_text">
+                <p class="p1_2">HOT DEAL</p>
+                <p class="p2">FISHNET CHAIR</p>
+                <p class="p3">Seat and back whith upholstery made of cold cure foam. Steel freme,
+                    <br>available in matt powder-coated black</p> <a href="index.html" class="order_us">ORDER US</a> </div>
+            <a href="#"><img class="navi2" src="img/navi.png" alt=""> </a>
+            <a href="#"><img class="active2" src="img/active.png" alt=""> </a>
+        </div>
+        <div class="promo_2">
+            <div class="prod_1">
+                <div class="promo22">
+                    <p class="p1">EXCLUSIVE</p>
+                    <p class="p2">Fishnet Chair</p>
+                    <p class="p3">Seat and back whith upholstery made of cold cure
+                        <br>foam. Steel freme, available in matt</p><a href="#" class="order_us_2">ORDER US</a> </div>
+            </div>
+            <div class="prod_2">
+                <a href="#"><img src="img/product-2-sm.jpg" alt="2_sm"></a>
+                <a href="#"><img src="img/product-3-sm.jpg" alt="3_sm"></a>
+                <a href="#"><img src="img/product-4-sm.jpg" alt="4_sm"></a>
+                <a href="#"><img src="img/product-5-sm.jpg" alt="5_sm"></a>
+            </div>
+        </div>
+        <div class="footer_1">
+            <div class="footer_1_text">
+                <p class="p_1">MOBILE APP</p>
+                <p class="p_2">FIND. FOLLOW.
+                    <br>FAVORITE.</p>
+                <p class="p_3">Save your favorites and share your style.</p>
+                <p class="p_4"><img src="img/footer/app-store.jpg" alt="1"><img src="img/footer/google-play.jpg" alt="2"></p>
+            </div>
+        </div>
+        <div class="footer_2"> </div>
     </div>
 </body>
 
