--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -140,10 +140,28 @@
                 <p class="p_2">FIND. FOLLOW.
                     <br>FAVORITE.</p>
                 <p class="p_3">Save your favorites and share your style.</p>
-                <p class="p_4"><img src="img/footer/app-store.jpg" alt="1"><img src="img/footer/google-play.jpg" alt="2"></p>
+                <a href="#" class="p_4"><img src="img/footer/app-store.jpg" alt="1"></a>
+                <a href="#" class="p_4"><img src="img/footer/google-play.jpg" alt="2"></a>
             </div>
         </div>
-        <div class="footer_2"> </div>
+        <div class="footer_2"> 
+            <div class="footer_2_in">
+                <table>
+                    <tr class="r_1">
+                        <td>CONTACT US</td>
+                        <td colspan="2">USEFUL INFORMATION</td>
+                        <td>LET'S STAY IN TOUCH</td>
+                    </tr>
+                    <tr>
+                        <td class="r2c1_4">a 132A Bridge Road Richmond VIC<br>Australia.<br><br>Talk to us on 1300 132<br>info@interior.com</td>
+                        <td class="r2c2_3">SALES TERMS<br>CUSTOMER CARE<br>DELIVERY</td>
+                        <td class="r2c2_3">ARCHITECT ACCOUNTS<br>CAREERS<br>EXCHANGES & RETURNS</td>
+                        <td ><p class="r2c1_4"> Suscrible to know about our latest news, product and<br>special offers just for suscribles</p><br><input type="text" placeholder="your email address"></td>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 
