--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Home-page</title>
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700" rel="stylesheet"> </head>
 
 <body>
     <div class="container">
@@ -115,7 +115,7 @@
                 <p class="p1_2">HOT DEAL</p>
                 <p class="p2">FISHNET CHAIR</p>
                 <p class="p3">Seat and back whith upholstery made of cold cure foam. Steel freme,
-                    <br>available in matt powder-coated black</p> <a href="index.html" class="order_us">ORDER US</a> </div>
+                    <br>available in matt powder-coated black</p><a href="index.html" class="order_us">ORDER US</a> </div>
             <a href="#"><img class="navi2" src="img/navi.png" alt=""> </a>
             <a href="#"><img class="active2" src="img/active.png" alt=""> </a>
         </div>
@@ -144,8 +144,9 @@
                 <a href="#" class="p_4"><img src="img/footer/google-play.jpg" alt="2"></a>
             </div>
         </div>
-        <div class="footer_2"> 
+        <div class="footer_2">
             <div class="footer_2_in">
+               <form action="#">
                 <table>
                     <tr class="r_1">
                         <td>CONTACT US</td>
@@ -153,16 +154,32 @@
                         <td>LET'S STAY IN TOUCH</td>
                     </tr>
                     <tr>
-                        <td class="r2c1_4">a 132A Bridge Road Richmond VIC<br>Australia.<br><br>Talk to us on 1300 132<br>info@interior.com</td>
-                        <td class="r2c2_3">SALES TERMS<br>CUSTOMER CARE<br>DELIVERY</td>
-                        <td class="r2c2_3">ARCHITECT ACCOUNTS<br>CAREERS<br>EXCHANGES & RETURNS</td>
-                        <td ><p class="r2c1_4"> Suscrible to know about our latest news, product and<br>special offers just for suscribles</p><br><input type="text" placeholder="your email address"></td>
+                        <td class="r2c1_4">a 132A Bridge Road Richmond VIC
+                            <br>Australia.
+                            <br>
+                            <br>Talk to us on 1300 132
+                            <br>info@interior.com</td>
+                        <td class="r2c2_3">SALES TERMS
+                            <br>CUSTOMER CARE
+                            <br>DELIVERY</td>
+                        <td class="r2c2_3">ARCHITECT ACCOUNTS
+                            <br>CAREERS
+                            <br>EXCHANGES & RETURNS</td>
+                        <td>
+                            <p class="r2c1_4"> Suscrible to know about our latest news, product and
+                                <br>special offers just for suscribles</p>
+                            <br>
+                            <input type="text" placeholder="your email address"> </td>
+                            
                     </tr>
-
                 </table>
-            </div>
+                <input type="image" src="img/footer/send.JPG"></form> 
+                <div class="footer2_text">© COPYRIGHT - INTERIOR 2016. ALL RIGHTS RESERVED.</div>
+                <img src="img/footer/social-links.jpg" alt="social">
+                <div class="footer2_text2">TERMS & CONDITION / PRIVACY POLICY & COOKIES</div>
+                </div>
+                
         </div>
-    </div>
 </body>
 
 </html>
