--- a/feelgood/HMML CSS/site watch/registr.html
+++ b/feelgood/HMML CSS/site watch/registr.html
@@ -62,7 +62,7 @@
         </div>
         <div class="footer">
             <hr align="left" width="100%" color="black" />
-            <p class="footer_text"></p>
+            <p class="footer_text"></p> <form action=""></form>
         </div>
     </div>
 </body>
