--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Home-page</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700" rel="stylesheet"> </head>
+    <title>Home-page</title> </head>
 
 <body>
     <div class="container">
@@ -13,7 +12,7 @@
             <a href="index.html"><img src="img/logo.png" alt="logo"></a>
             <ul class="menu">
                 <li> <a class="point" href="#">HOME</a></li>
-                <li> <a class="point" href="#">PRODUCTS</a></li>
+                <li> <a class="point" href="catalog.html">PRODUCTS</a></li>
                 <li> <a class="point" href="#">HISTORY</a></li>
                 <li> <a class="point" href="#">SHOWROOM</a></li>
                 <li> <a class="point" href="#">CONTACT</a></li>
