--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Home-page</title> </head>
+    <title>Home-page</title>
+</head>
 
 <body>
     <div class="container">
@@ -83,27 +84,27 @@
             </div>
             <div class="trending">
                 <p>Trending Product</p> <a href="#" class="explore_all explore_all_2">EXPLORE ALL&nbsp&nbsp</a>
-                <table>
+                <table class="catalog_short">
                     <tr>
                         <td>
-                            <a href="#"><img src="img/product-11.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-11.jpg" alt="cat_img"></a>
                         </td>
                         <td>
-                            <a href="#"><img src="img/product-21.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-21.jpg" alt="cat_img"></a>
                         </td>
                         <td>
-                            <a href="#"><img src="img/product-31.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-31.jpg" alt="cat_img"></a>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="#"><img src="img/product-41.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-41.jpg" alt="cat_img"></a>
                         </td>
                         <td>
-                            <a href="#"><img src="img/product-61.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-61.jpg" alt="cat_img"></a>
                         </td>
                         <td>
-                            <a href="#"><img src="img/product-71.jpg" alt=""></a>
+                            <a href="#"><img src="img/product-71.jpg" alt="cat_img"></a>
                         </td>
                     </tr>
                 </table>
@@ -145,40 +146,39 @@
         </div>
         <div class="footer_2">
             <div class="footer_2_in">
-               <form action="#">
-                <table>
-                    <tr class="r_1">
-                        <td>CONTACT US</td>
-                        <td colspan="2">USEFUL INFORMATION</td>
-                        <td>LET'S STAY IN TOUCH</td>
-                    </tr>
-                    <tr>
-                        <td class="r2c1_4">a 132A Bridge Road Richmond VIC
-                            <br>Australia.
-                            <br>
-                            <br>Talk to us on 1300 132
-                            <br>info@interior.com</td>
-                        <td class="r2c2_3">SALES TERMS
-                            <br>CUSTOMER CARE
-                            <br>DELIVERY</td>
-                        <td class="r2c2_3">ARCHITECT ACCOUNTS
-                            <br>CAREERS
-                            <br>EXCHANGES & RETURNS</td>
-                        <td>
-                            <p class="r2c1_4"> Suscrible to know about our latest news, product and
-                                <br>special offers just for suscribles</p>
-                            <br>
-                            <input type="text" placeholder="your email address"> </td>
-                            
-                    </tr>
-                </table>
-                <input type="image" src="img/footer/send.JPG"></form> 
-                <div class="footer2_text">© COPYRIGHT - INTERIOR 2016. ALL RIGHTS RESERVED.</div>
-                <img src="img/footer/social-links.jpg" alt="social">
+                <form action="#">
+                    <table>
+                        <tr class="r_1">
+                            <td>CONTACT US</td>
+                            <td colspan="2">USEFUL INFORMATION</td>
+                            <td>LET'S STAY IN TOUCH</td>
+                        </tr>
+                        <tr>
+                            <td class="r2c1_4">a 132A Bridge Road Richmond VIC
+                                <br>Australia.
+                                <br>
+                                <br>Talk to us on 1300 132
+                                <br>info@interior.com</td>
+                            <td class="r2c2_3">SALES TERMS
+                                <br>CUSTOMER CARE
+                                <br>DELIVERY</td>
+                            <td class="r2c2_3">ARCHITECT ACCOUNTS
+                                <br>CAREERS
+                                <br>EXCHANGES & RETURNS</td>
+                            <td>
+                                <p class="r2c1_4"> Suscrible to know about our latest news, product and
+                                    <br>special offers just for suscribles</p>
+                                <br>
+                                <input type="text" placeholder="your email address"> </td>
+                        </tr>
+                    </table>
+                    <input type="image" src="img/footer/send.JPG">
+                </form>
+                <div class="footer2_text">© COPYRIGHT - INTERIOR 2016. ALL RIGHTS RESERVED.</div> <img src="img/footer/social-links.jpg" alt="social">
                 <div class="footer2_text2">TERMS & CONDITION / PRIVACY POLICY & COOKIES</div>
-                </div>
-                
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
