--- a/feelgood/HMML CSS/assets макет/catalog.html
+++ b/feelgood/HMML CSS/assets макет/catalog.html
@@ -33,6 +33,102 @@
                 <li><a href="#">CLASSIC</a></li>
             </ul>
         </div>
+        <div class="catalog_trending">
+            <table>
+                <tr>
+                    <td>
+                        <a href="#"><img src="img/product-11.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-21.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-31.jpg" alt="cat_img"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#"><img src="img/product-41.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-61.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-71.jpg" alt="cat_img"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#"><img src="img/product-11.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-21.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-31.jpg" alt="cat_img"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="#"><img src="img/product-41.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-61.jpg" alt="cat_img"></a>
+                    </td>
+                    <td>
+                        <a href="#"><img src="img/product-71.jpg" alt="cat_img"></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="refresh">
+            <a href="#"><img src="img/catalog/refresh.jpg" alt=""></a>
+        </div>
+        <div class="catalog_promo">
+            <div class="promo1">
+                <p class="p1">EXCLUSIVE</p>
+                <p class="p2">Fishnet Chair</p>
+                <p class="p3">Seat and back whith upholstery made of cold cure foam.
+                    <br> Steel freme, available in matt</p> <a href="#" class="order_us">ORDER US</a> </div>
+            <div class="promo2">
+                <p class="p1">EXCLUSIVE</p>
+                <p class="p2">Fishnet Chair</p>
+                <p class="p3">Seat and back whith upholstery made of cold cure foam.
+                    <br> Steel freme, available in matt</p> <a href="#" class="order_us">ORDER US</a> </div>
+        </div>
+        <div class="footer_2">
+            <div class="footer_2_in">
+                <form action="#">
+                    <table>
+                        <tr class="r_1">
+                            <td>CONTACT US</td>
+                            <td colspan="2">USEFUL INFORMATION</td>
+                            <td>LET'S STAY IN TOUCH</td>
+                        </tr>
+                        <tr>
+                            <td class="r2c1_4">a 132A Bridge Road Richmond VIC
+                                <br>Australia.
+                                <br>
+                                <br>Talk to us on 1300 132
+                                <br>info@interior.com</td>
+                            <td class="r2c2_3">SALES TERMS
+                                <br>CUSTOMER CARE
+                                <br>DELIVERY</td>
+                            <td class="r2c2_3">ARCHITECT ACCOUNTS
+                                <br>CAREERS
+                                <br>EXCHANGES & RETURNS</td>
+                            <td>
+                                <p class="r2c1_4"> Suscrible to know about our latest news, product and
+                                    <br>special offers just for suscribles</p>
+                                <br>
+                                <input type="text" placeholder="your email address"> </td>
+                        </tr>
+                    </table>
+                    <input type="image" src="img/footer/send.JPG"> </form>
+                <div class="footer2_text">© COPYRIGHT - INTERIOR 2016. ALL RIGHTS RESERVED.</div> <img src="img/footer/social-links.jpg" alt="social">
+                <div class="footer2_text2">TERMS & CONDITION / PRIVACY POLICY & COOKIES</div>
+            </div>
+        </div>
     </div>
 </body>
 
