--- a/feelgood/HMML CSS/assets макет/index.html
+++ b/feelgood/HMML CSS/assets макет/index.html
@@ -26,8 +26,9 @@
                 <p class="p2">FISHNET CHAIR</p>
                 <p class="p3">Seat and back whith upholstery made of cold cure foam. Steel freme,
                     <br>available in matt powder-coated black</p> <a href="index.html" class="order_us">ORDER US</a> </div>
-            <a href="#"><img class="navi" src="img/navi.png" alt=""> </a>
-            <a href="#"><img class="active" src="img/active.png" alt=""> </a>
+                    <div class="navi">
+                        <a href=""></a><a href=""></a><a href=""></a>
+                    </div>
         </div>
         <div class="content">
             <div class="roll">
