--- a/feelgood/HMML CSS/Задание_6_ЛипинД/index.html
+++ b/feelgood/HMML CSS/Задание_6_ЛипинД/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <div class="featured_picture">
+            <div>
                 <div class="c1">
                     <div class="c2">
                         <a href="#"><img src="img/arrow2.png" alt=""></a>
