Валидация. создание препроцессора less. Gостороение лесенки css.

--- a/feelgood/HMML CSS/Интернет магазин Часов/catalog/goods2.html
+++ b/feelgood/HMML CSS/Интернет магазин Часов/catalog/goods2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="header"> <img src="../img/logo.png" alt="logo_img">
-            <h1 class="text_logo" align="center">Магазин часов "Час-Пик"</h1>
-            <p class="text_logo" align="center" size="14">Добро пожаловать!</p>
+            <h1 class="text_logo">Магазин часов "Час-Пик"</h1>
+            <p class="text_logo">Добро пожаловать!</p>
             <ul class='menu'>
                 <li><a href="../index.html">Главная</a></li>
                 <li><a href="../registr.html">Регистрация</a></li>
@@ -19,7 +19,6 @@
             </ul>
         </div>
         <div class="content">
-            <hr align="left" width="100%" color="Grey" />
             <h1 class="heading">Смарт-часы Mi</h1>
             <h2>Описание товара</h2>
             <a href="../img/g2.jpg" target="_blank"> <img src="../img/g2.jpg" width="300" height="300" alt="foto" class="foto"></a>
@@ -30,12 +29,14 @@
             <p class="long">Смарт-часы СуперВОТЧ-3000&nbsp;Frontier SM-R760, темно-серый&nbsp;&mdash; это ваш ежедневный спутник и&nbsp;надежный помощник во&nbsp;всех делах. Часы предложат своему владельцу расширенный функционал, будучи оснащенными рядом возможностей. Основная опция&nbsp;&mdash; это ответы на&nbsp;телефонные звонки и&nbsp;смс, просмотр мобильных напоминаний и&nbsp;оповещений. Часы синхронизируются со&nbsp;смартфоном на&nbsp;любой&nbsp;ОС и&nbsp;обеспечивают доступ ко&nbsp;всем приложениям устройства и&nbsp;телефонной книге. Смарт-часы SAMSUNG Galaxy Gear S3&nbsp;Frontier SM-R760, темно-серый выполнены в&nbsp;прочном и&nbsp;защищенном от&nbsp;влаги и&nbsp;пыли корпусе. Модель имеет стильный и&nbsp;современный дизайн с&nbsp;традиционным круглым циферблатом. Предусмотрена возможность менять ремешки, выбирая вариант любого цвета для дополнения вашего образа.</p>
             <h3 id='p3'>Характеристика товара</h3>
             <p class="char">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum adipisci doloremque illo corporis. Laborum
-                <ol class="char"><b>laboriosam, maxime quae nobis temporibus incidunt tempore,</b>
+               
+                <ol class="char">
                     <li>ab&nbsp;praesentium tempora deleniti ducimus esse voluptate iure suscipit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, </li>
                     <li>vero. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                 </ol>
-                <ul class="char"><b>laboriosam, maxime quae nobis temporibus incidunt tempore,</b>
+                <b>laboriosam, maxime quae nobis temporibus incidunt tempore,</b>
+                <ul class="char">
                     <li>ab&nbsp;praesentium tempora deleniti ducimus esse voluptate iure suscipit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, </li>
                     <li>vero. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
@@ -52,7 +53,7 @@
                     <tr class="thead">
                         <td>Модель</td>
                         <td colspan="2">Характеристики</td>
-                        <td colspan="3">Параметры</td>
+                        <td colspan="2">Параметры</td>
                     </tr>
                     <tr>
                         <td>Смарт-часы Mi</td>
@@ -87,7 +88,6 @@
                     <li><a href="#p3">Характеристики</a></li>
                 </ol> <a class="long" href="https://geekbrains.ru/study_groups/5683/videos/31101" target="_blank">Geekbrains</a> </div>
         <div class="footer">
-            <hr align="left" width="100%" color="black" />
             <p class="footer_text"></p>
         </div>
     </div>
