--- a/feelgood/HMML CSS/Интернет магазин Часов/registr.html
+++ b/feelgood/HMML CSS/Интернет магазин Часов/registr.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="header"> <img src="img/logo.png" alt="logo_img">
-            <h1 class="text_logo" align="center">Магазин часов "Час-Пик"</h1>
-            <p class="text_logo" align="center" size="14">Добро пожаловать!</p>
+            <h1 class="text_logo">Магазин часов "Час-Пик"</h1>
+            <p class="text_logo">Добро пожаловать!</p>
             <ul class='menu'>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Регистрация</a></li>
@@ -19,7 +19,6 @@
             </ul>
         </div>
         <div class="content">
-            <hr align="left" width="100%" color="Grey" />
             <h2>Регистрация</h2>
             <form action="#">
                 <fieldset>
@@ -34,7 +33,7 @@
                     <input type="radio" name='pol'>
                     <br>
                     <br> Ваш возраст:
-                    <select name="" id="" size="1">
+                    <select name="select" id="select" size="1">
                         <!--атрибут multiple множественный выбор-->
                         <option disabled>Ваш возраст</option>
                         <option value="17">..-17</option>
@@ -54,15 +53,14 @@
                     <br> </fieldset>
                 <fieldset>
                     <legend>О себе</legend>
-                    <textarea name="" id="himself" cols="1" rows="5" placeholder="Расскажите о себе..."></textarea>
+                    <textarea name="himself" id="himself" cols="1" rows="5" placeholder="Расскажите о себе..."></textarea>
                     <br> Фото:
                     <input type="file"> </fieldset>
                 <input type="submit" value="Отправить анкету">
                 <input type="reset" value="Очистить все поля"> </form>
         </div>
         <div class="footer">
-            <hr align="left" width="100%" color="black" />
-            <p class="footer_text"></p> <form action=""></form>
+            <p class="footer_text"></p> 
         </div>
     </div>
 </body>
