--- a/feelgood/HMML CSS/Интернет магазин Часов/catalog/watch.html
+++ b/feelgood/HMML CSS/Интернет магазин Часов/catalog/watch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="header"> <img src="../img/logo.png" alt="logo_img">
-            <h1 class="text_logo" align="center">Магазин часов "Час-Пик"</h1>
-            <p class="text_logo" align="center" size="14">Добро пожаловать!</p>
+            <h1 class="text_logo">Магазин часов "Час-Пик"</h1>
+            <p class="text_logo">Добро пожаловать!</p>
             <ul class='menu'>
                 <li><a href="../index.html">Главная</a></li>
                 <li><a href="../registr.html">Регистрация</a></li>
@@ -19,7 +19,6 @@
             </ul>
         </div>
         <div class="content catalog">
-            <hr align="left" width="100%" color="Grey" />
             <!-- Описание товара  -->
             <h2>Каталог товаров</h2>
             <div class="goods">
@@ -44,7 +43,6 @@
                 <a href="goods2.html"><img src="../img/g2.jpg" alt="foto" height="200"></a> <a href="goods2.html" class="button">Смарт-часы Mi</a></div>
         </div>
         <div class="footer">
-            <hr align="left" width="100%" color="black" />
             <p class="footer_text"></p>
         </div>
     </div>
