--- a/feelgood/HMML CSS/Интернет магазин Часов/index.html
+++ b/feelgood/HMML CSS/Интернет магазин Часов/index.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css" >
+    <!--[if lt IE 6]>
+    <link rel="stylesheet" href="style_ie.css" type="text/css" />
+    <![endif]-->
+    <!-- -->
+    <!-- [if (IE 6)& (IE 7)] - 6-я и 7-я версия-->
+    <!-- [if (IE 6) | (IE 7)] - 6-я или 7-я версия-->
+    <!-- lt - версия меньше указанной-->
+    <!-- lte - меньше или равно указанной-->
+    <!-- gt - версия больше указанной-->
+    <!-- gte - больше или равно указанной-->
+</head>
 
 <body>
     <div class="container">
