1 урок начало макета

--- a/feelgood/2. HMML CSS/online_watch_store/catalog/goods1.html
+++ b/feelgood/2. HMML CSS/online_watch_store/catalog/goods1.html
@@ -30,6 +30,7 @@
             <h3>Характеристика товара</h3>
             <p class="char">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum adipisci doloremque illo corporis. Laborum</p>
             <ol class="char">
+            <ol class="char">
                 <li>ab&nbsp;praesentium tempora deleniti ducimus esse voluptate iure suscipit.</li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, </li>
                 <li>vero. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
