--- a/feelgood/3. Основная программа/урок 1/дз/index.html
+++ b/feelgood/3. Основная программа/урок 1/дз/index.html
@@ -30,7 +30,7 @@
             <video></video>
         </section>
         <section class="dignity">
-            <h2>Dignity and pluses product</h2>
+            <h2 class="h2">Dignity and pluses product</h2>
             <div class="dignity_1">
                 <ul>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
@@ -44,6 +44,45 @@
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                 </ul>
+            </div>
+        </section>
+        <section class="scrinshots">
+            <h2>Scrinshots</h2>
+            <div class="descriptions">
+                <div class="descr descr_1"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                    <h3>The description for the image</h3>
+                    <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                </div>
+                <div class="descr descr_2"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                    <h3>The description for the image</h3>
+                    <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+                </div>
+                <div class="descr descr_3"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                    <h3>The description for the image</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+                </div>
+                <div class="descr descr_4"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                    <h3>The description for the image</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+            <h2>Reviews</h2>
+            <div class="comments">
+                <div class="comm comm_1"><img src="image/userpic.png" alt="userpic">
+                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                       <address>Lourens S.</address>
+                </div>
+                <div class="comm comm_2"><img src="image/userpic.png" alt="userpic">
+                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                       <address>Lourens S.</address></div>
+                <div class="comm comm_3"><img src="image/userpic.png" alt="userpic">
+                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                       <address>Lourens S.</address></div>
+                <div class="comm comm_4"><img src="image/userpic.png" alt="userpic">
+                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+                       <address>Lourens S.</address></div>
             </div>
         </section>
     </div>
