всё кроме footer

--- a/feelgood/3. Основная программа/урок 1/дз/index.html
+++ b/feelgood/3. Основная программа/урок 1/дз/index.html
@@ -71,18 +71,60 @@
             <h2>Reviews</h2>
             <div class="comments">
                 <div class="comm comm_1"><img src="image/userpic.png" alt="userpic">
-                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                       <address>Lourens S.</address>
-                </div>
+                    <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address> </div>
                 <div class="comm comm_2"><img src="image/userpic.png" alt="userpic">
-                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                       <address>Lourens S.</address></div>
+                    <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
                 <div class="comm comm_3"><img src="image/userpic.png" alt="userpic">
-                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                       <address>Lourens S.</address></div>
+                    <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
                 <div class="comm comm_4"><img src="image/userpic.png" alt="userpic">
-                        <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-                       <address>Lourens S.</address></div>
+                    <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
+            </div>
+        </section>
+        <section class="buy_now">
+            <h2>Buy it now</h2>
+            <div class="product">
+                <div class="standart">
+                    <h3>Standart</h3>
+                    <div class="price">$100</div>
+                    <ol>
+                        <li>Porro officia cumque sint deleniti; </li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem; </li>
+                        <li>Aperiam nulla ea neque.</li>
+                    </ol>
+                </div>
+                <div class="premium">
+                    <h3>Premium</h3>
+                    <div class="price">$150</div>
+                    <ol>
+                        <li>Porro officia cumque sint deleniti; </li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem; </li>
+                        <li>Aperiam nulla ea neque.</li>
+                        <li>Porro officia cumque sint deleniti; </li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem; </li>
+                        <li>Aperiam nulla ea neque.</li>
+                    </ol>
+                </div>
+                <div class="lux">
+                    <h3>Lux</h3>
+                    <div class="price">$200</div>
+                    <ol>
+                        <li>Porro officia cumque sint deleniti; </li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem; </li>
+                        <li>Aperiam nulla ea neque.</li>
+                        <li>Porro officia cumque sint deleniti; </li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem; </li>
+                        <li>Aperiam nulla ea neque.</li>
+                        <li>Porro officia cumque sint deleniti;</li>
+                        <li>Тemo facere rem vitae odit;</li>
+                        <li>Cum odio, iste quia doloribus autem;</li>
+                        <li>Aperiam nulla ea neque.</li>
+                    </ol>
+                </div>
             </div>
         </section>
     </div>
