--- a/feelgood/3. Основная программа/урок 1/дз/index.html
+++ b/feelgood/3. Основная программа/урок 1/дз/index.html
@@ -31,14 +31,14 @@
         </section>
         <section class="dignity">
             <h2 class="h2">Dignity and pluses product</h2>
-            <div class="dignity_1">
+            <div class="dignity-1">
                 <ul>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                 </ul>
             </div>
-            <div class="dignity_2">
+            <div class="dignity-2">
                 <ul>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
                     <li>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</li>
@@ -49,19 +49,19 @@
         <section class="scrinshots">
             <h2>Scrinshots</h2>
             <div class="descriptions">
-                <div class="descr descr_1"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-1"> <img src="image/scrinshot.jpg" alt="scrinshot">
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </div>
-                <div class="descr descr_2"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-2"> <img src="image/scrinshot.jpg" alt="scrinshot">
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </div>
-                <div class="descr descr_3"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-3"> <img src="image/scrinshot.jpg" alt="scrinshot">
                     <h3>The description for the image</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 </div>
-                <div class="descr descr_4"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-4"> <img src="image/scrinshot.jpg" alt="scrinshot">
                     <h3>The description for the image</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 </div>
@@ -70,17 +70,17 @@
         <section class="reviews">
             <h2>Reviews</h2>
             <div class="comments">
-                <div class="comm comm_1"><img src="image/userpic.png" alt="userpic">
+                <div class="comm comm-1"><img src="image/userpic.png" alt="userpic">
                     <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address> </div>
-                <div class="comm comm_2"><img src="image/userpic.png" alt="userpic">
+                <div class="comm comm-2"><img src="image/userpic.png" alt="userpic">
                     <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
-                <div class="comm comm_3"><img src="image/userpic.png" alt="userpic">
+                <div class="comm comm-3"><img src="image/userpic.png" alt="userpic">
                     <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
-                <div class="comm comm_4"><img src="image/userpic.png" alt="userpic">
+                <div class="comm comm-4"><img src="image/userpic.png" alt="userpic">
                     <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p> <address>Lourens S.</address></div>
             </div>
         </section>
-        <section class="buy_now">
+        <section class="buyNow">
             <h2>Buy it now</h2>
             <div class="product">
                 <div class="standart">
@@ -91,8 +91,7 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem; </li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol>
-                </div>
+                    </ol> <a href="#" class="buttonBuy">BUY</a> </div>
                 <div class="premium">
                     <h3>Premium</h3>
                     <div class="price">$150</div>
@@ -105,8 +104,7 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem; </li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol>
-                </div>
+                    </ol> <a href="#" class="buttonBuy">BUY</a> </div>
                 <div class="lux">
                     <h3>Lux</h3>
                     <div class="price">$200</div>
@@ -123,10 +121,21 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem;</li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol>
-                </div>
+                    </ol> <a href="#" class="buttonBuy">BUY</a> </div>
             </div>
         </section>
+        <footer>
+            <h2>Contacts</h2>
+            <div class="contBlock">
+                <form action="#">
+                    <input type="text" id="name" placeholder="Your name:">
+                    <br>
+                    <input type="email" id="email" placeholder="Your email:">
+                    <br>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message:"></textarea>
+                    <input type="submit" value="SEND" id="send">
+                </form> <address></address> </div>
+        </footer>
     </div>
 </body>
 
