--- a/feelgood/3. Основная программа/урок 1/дз/index.html
+++ b/feelgood/3. Основная программа/урок 1/дз/index.html
@@ -27,7 +27,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
-            <video></video>
+            <a href="#"><video></video></a>
         </section>
         <section class="dignity">
             <h2 class="h2">Dignity and pluses product</h2>
@@ -49,19 +49,19 @@
         <section class="scrinshots">
             <h2>Scrinshots</h2>
             <div class="descriptions">
-                <div class="descr descr-1"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-1"><a href="image/scrinshot.jpg"><img src="image/scrinshot.jpg" alt="scrinshot"></a>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </div>
-                <div class="descr descr-2"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-2"><a href="image/scrinshot.jpg"><img src="image/scrinshot.jpg" alt="scrinshot"></a>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </div>
-                <div class="descr descr-3"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-3"><a href="image/scrinshot.jpg"><img src="image/scrinshot.jpg" alt="scrinshot"></a>
                     <h3>The description for the image</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 </div>
-                <div class="descr descr-4"> <img src="image/scrinshot.jpg" alt="scrinshot">
+                <div class="descr descr-4"><a href="image/scrinshot.jpg"><img src="image/scrinshot.jpg" alt="scrinshot"></a>
                     <h3>The description for the image</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 </div>
@@ -133,8 +133,21 @@
                     <input type="email" id="email" placeholder="Your email:">
                     <br>
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message:"></textarea>
-                    <input type="submit" value="SEND" id="send">
-                </form> <address></address> </div>
+                    <input type="submit" value="SEND" id="send"> </form> <address>
+                    <ul>
+                        <li><a href="#"><img src="image/skype_icon.png" alt="skype"></a><a href="#" class="contLink"> here_your_login_skype</a></li>
+                        <li> <a href=""><img src="image/icq_icon.png" alt="icq"></a><a href="#" class="contLink"> 279679659</a></li>
+                        <li><a href="#"><img src="image/email_icon.png" alt="mail"></a><a href="#" class="contLink"> psdhtmlcss@mail.ru</a></li>
+                        <li><a href=""><img src="image/phone_icon.png" alt="phone"></a><a href="#" class="contLink"> 80 00 4568 55 55</a></li>
+                    </ul>
+                    <a href=""><img src="image/social_buttons_1.png" alt="social"></a>
+                    <a href=""><img src="image/social_buttons_2.png" alt="social"></a>
+                    <a href=""><img src="image/social_buttons_3.png" alt="social"></a>
+                    <a href=""><img src="image/social_buttons_4.png" alt="social"></a>
+                    <a href=""><img src="image/social_buttons_5.png" alt="social"></a>
+                </address>
+                </div>
+                <div class="copyright">Copyright © 2019 Product name · PSD HTML CSS</div>
         </footer>
     </div>
 </body>
