--- a/feelgood/1-2. Базовые курсы/2. HMML CSS/index.html
+++ b/feelgood/1-2. Базовые курсы/2. HMML CSS/index.html
@@ -9,13 +9,16 @@
 
 <body>
     <div class="content">
-       <h1>Добро пожаловать в мою галерею!</h1>
+        <h1>Добро пожаловать в мою галерею!</h1>
         <h2>Выберите работу </h2>
         <div class="block1">
-            <a href="assets_layout/index.html"><img src="/img/2.jpg" alt=""></a>
+            <a href="assets_layout/index.html"><img src="img/2.jpg" alt="1"></a>
         </div>
         <div class="block2">
-            <a href="online_watch_store/index.html"><img src="/img/1.jpg" alt=""></a>
+            <a href="online_watch_store/index.html"><img src="img/1.jpg" alt="2"></a>
+        </div>
+        <div class="block3">
+            <a href="quest/index.html"><img src="img/3.jpg" alt="3"></a>
         </div>
     </div>
 </body>
