--- a/feelgood/1-2. Базовые курсы/2. HMML CSS/index.html
+++ b/feelgood/1-2. Базовые курсы/2. HMML CSS/index.html
@@ -20,6 +20,8 @@
         <div class="block3">
             <a href="quest/index.html"><img src="img/3.jpg" alt="3"></a>
         </div>
+        <iframe src="assets_layout/index.html" frameborder="0" class="block2" height="200px"></iframe>
+
     </div>
 </body>
 
